--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/pg": "^8.15.5",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "cookies-next": "^6.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -28,14 +27,17 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "zod": "^4.1.5"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie": "^0.6.0",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/node": "^20.19.13",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
