--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
@@ -28,6 +30,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "stripe": "^18.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
   },
