--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.0",
     "stripe": "^18.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
