--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
@@ -22,11 +23,13 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "html-to-text": "^9.0.5",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
