--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
@@ -34,6 +35,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.0",
+    "replicate": "^1.1.0",
     "stripe": "^18.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
@@ -54,6 +56,8 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "form-data": "^4.0.4",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "^5"
