--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/helmet": "^0.0.48",
     "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "cookies-next": "^6.1.0",
+    "cors": "^2.8.5",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "express-validator": "^7.2.1",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "helmet": "^8.1.0",
     "html-to-text": "^9.0.5",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
